--- a/style.css
+++ b/style.css
@@ -4,31 +4,52 @@
   --background-light-color: #111;
 }
 
-body, html {
- width: 100vw;
- min-width: 100vw;
- max-width: 100vw;
+body,
+html {
+  width: 100vw;
+  min-width: 100vw;
+  max-width: 100vw;
 
- overflow-x: hidden;
- overflow-y: auto;
- box-sizing: border-box;
- padding: 0;
- margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-
 
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+
+  background: var(--background-color);
+  color: var(--primary-color);
 }
 .btn {
   touch-action: manipulation;
+}
+button {
+  background: var(--background-color);
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  padding: 8px 16px;
+  cursor: pointer;
+
+  -webkit-user-select: none; /* For Safari */
+  -ms-user-select: none;    /* For IE 10 and IE 11 */
+  user-select: none;        /* Standard syntax */
+}
+
+button:hover {
+  background: var(--primary-color);
+  color: var(--background-color);
 }
 #canvas {
   border: 1px solid red;
@@ -63,9 +84,12 @@ body {
   background: var(--background-light-color);
   /* font-size: 0.5rem; */
 }
-.grid{
+.grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Creates 3 columns, each taking 1 fraction of available space */
+  grid-template-columns: repeat(
+    3,
+    1fr
+  ); /* Creates 3 columns, each taking 1 fraction of available space */
   grid-template-rows: repeat(3, 100px); /* Creates 3 rows, each 100px tall */
   gap: 0px; /* Adds space between grid items */
   border: 2px solid var(--primary-color);
@@ -78,11 +102,11 @@ body {
   height: 0.4rem;
 }
 .hide {
-    display: none;
+  display: none;
 }
 .label {
-    display: flex;
-    align-self: center;
+  display: flex;
+  align-self: center;
 }
 
 /* #view-wrapper {
