--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ button {
   cursor: pointer;
 
   -webkit-user-select: none; /* For Safari */
-  -ms-user-select: none;    /* For IE 10 and IE 11 */
-  user-select: none;        /* Standard syntax */
+  -ms-user-select: none; /* For IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 button:hover {
@@ -98,8 +98,23 @@ button:hover {
   align-self: flex-start;
 }
 .grid span {
-  width: 0.4rem;
-  height: 0.4rem;
+  width: 0.5rem;
+  height: 0.5rem;
+}
+.note {
+  color: white;
+}
+@media screen and (max-width: 800px) {
+  .grid {
+    font-size: 8px;
+  }
+  .grid span {
+    width: 0.3rem;
+    height: 0.3rem;
+  }
+  .note {
+    display: none;
+  }
 }
 .hide {
   display: none;
@@ -109,7 +124,9 @@ button:hover {
   align-self: center;
 }
 
-/* #view-wrapper {
-  padding: 20px;
-  background-color: rgb(226, 255, 6);
-} */
+#view-wrapper {
+  /* padding-top: 20px; */
+  background-color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+}
